...
            ToolbarItem(placement: .primaryAction) {
                Button {
                    isPresentingNewExercise = true
                } label: {
                    Iconoir.plus.asImage
                }
                .accessibilityIdentifier("exercises.addButton")
                .accessibilityLabel("exercises.addButton.label")
            }
        }
        .sheet(isPresented: $isPresentingNewExercise) {
            ExerciseEditorView()
        }
...
